@@ -37,26 +37,25 @@ make OPTIMIZE="$RPM_OPT_FLAGS"
 make test
 
 %install
-rm -rf $RPM_BUILD_ROOT
-eval `perl '-V:installarchlib'`
-mkdir -p $RPM_BUILD_ROOT$installarchlib
 %makeinstall
-rm -f `find $RPM_BUILD_ROOT -type f -name perllocal.pod -o -name .packlist`
+ 
+[ -x /usr/lib/rpm/brp-compress ] && /usr/lib/rpm/brp-compress
 
-[ -x %{_libdir}/rpm/brp-compress ] && %{_libdir}/rpm/brp-compress
+find $RPM_BUILD_ROOT \( -name perllocal.pod -o -name .packlist \) -exec rm -v {} \;
 
-find $RPM_BUILD_ROOT%{_prefix} -type f -print | \
-	sed "s@^$RPM_BUILD_ROOT@@g" > %{name}-%{version}-%{release}-filelist
-if [ "$(cat %{name}-%{version}-%{release}-filelist)X" = "X" ] ; then
-    echo "ERROR: EMPTY FILE LIST"
-    exit 1
+find $RPM_BUILD_ROOT/usr -type f -print | \
+	sed "s@^$RPM_BUILD_ROOT@@g" | \
+	grep -v perllocal.pod | \
+	grep -v "\.packlist" > %{name}-%{version}-filelist
+if [ "$(cat %{name}-%{version}-filelist)X" = "X" ] ; then
+	exit -1
 fi
 
 %clean
 rm -rf $RPM_BUILD_ROOT
 
-%files -f %{name}-%{version}-%{release}-filelist
-%defattr(-,root,root,-)
+%files -f %{name}-%{version}-filelist
+%defattr(-,root,root)
 
 %changelog
 * @DATE@ gtk-perl-list@gnome.org - @VERSION@
