@@ -1,3 +1,10 @@
+2004/10/24 11:55 (-0400) rwmcfa1
+
+	* MANIFEST.SKIP: updates
+
+	* perl-Gnome2-Print.spec.in: new scheme that addresses x86_64 problems
+	found by Carl Nygard
+
 2004/07/05 23:32 (+0200) ebassi
 	
 	A t/08.GnomePrintPaper.t
